--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,17 @@ body {
 /* todo css */
 
 #todobox {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     margin-right: 2%;
     text-align: center;
     list-style: none;
 }
 
 .xbutton {
-    font-size: 20%;
+    padding-left: 5px;
+    font-size: 30%;
 }
 
 .xbutton:hover {  
