--- a/css/style.css
+++ b/css/style.css
@@ -64,25 +64,35 @@ body {
     list-style: none;
 }
 
+.todo-list {
+    color: white;
+    text-decoration: underline;
+    text-shadow: 1px 1px darkgrey;
+}
+
 .xbutton {
     padding-left: 5px;
-    font-size: 30%;
+    font-size: 40%;
 }
 
 .xbutton:hover {  
     background-color: black;
 }
 
+/* temp css */
+
 #temp {
     color: azure;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    text-shadow: 1px 1px red;
 }
 
 .cloudIcon {
-    margin-left: 30%;
     text-align: center;
     width: 50%;
     height: 70%;
 }
+
