--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body {
 }
 
 #container {
-    height: 800px;
+    height: 50%;
+    margin-top: 20%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -95,4 +97,22 @@ body {
     width: 50%;
     height: 70%;
 }
+
+input {
+    color: white;
+    text-decoration: underline;
+    text-shadow: 1px 1px darkgrey;
+    background-color:transparent;
+    border: none;
+    text-decoration: underline;
+}
+
+::placeholder {
+    border-bottom: solid 2px white;
+    color: wheat;
+    text-shadow: 1px 1px red;
+    font-size: 15px;
+  }
+
+
 
